Implementación de la vista general
Se implementa el backend de la vista general de inscripciones

--- a/Implementación/App/interfazGrafica/Encabezado.Master
+++ b/Implementación/App/interfazGrafica/Encabezado.Master
@@ -7,6 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Gráficas Inscripción</title>
     <link href="Styles/estilos.css" rel="stylesheet" type="text/css" />
+    <script src="../Scripts/jquery-3.3.1.min.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
