--- a/Implementación/App/interfazGrafica/Encabezado.Master
+++ b/Implementación/App/interfazGrafica/Encabezado.Master
@@ -26,7 +26,7 @@
         <div>
             <ul id="menu_general">
                 <li><a href="Default.aspx">Muestra general</a></li>
-                <li><a href="inscripcionRegion.aspx">Región</a></li>
+                <li id="menuRegion"><a href="inscripcionRegion.aspx">Región</a></li>
                 <li><a href="#">Área académica</a></li>
                 <li><a href="#">Programa educativo</a></li>
             </ul>
