--- a/Implementación/App/interfazGrafica/Styles/estilos.css
+++ b/Implementación/App/interfazGrafica/Styles/estilos.css
@@ -13,7 +13,7 @@
     background: -webkit-linear-gradient(left, #fff 5%,#069 50%);
     background: -o-linear-gradient(left, #fff 5%,#069 50%);
     background: linear-gradient(to right, #fff 5%,#069 50%);
-    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1,startColorstr='#FFFFFF', endColorstr='#006699'); /*For IE7-8-9*/
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1,startColorstr='#FFFFFF', endColorstr='#006699');
 }
 
 #span-nombre-uv {
@@ -82,8 +82,7 @@
 .imagenesSeleccion > img {
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%);
-    -o-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);   
     filter: grayscale(100%);
     width: 40px;
     height: 40px;
@@ -95,6 +94,5 @@
         -webkit-filter: grayscale(0%);
         -moz-filter: grayscale(0%);
         -ms-filter: grayscale(0%);
-        -o-filter: grayscale(0%);
         filter: grayscale(0%);
     }
