--- a/Implementación/App/interfazGrafica/Styles/estilos.css
+++ b/Implementación/App/interfazGrafica/Styles/estilos.css
@@ -1,13 +1,33 @@
 ﻿body {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Segoe UI', sans-serif, Arial;
-    height: 100%;
-    width: 100%;
+    font-family: sans-serif;
 }
-
+.boton {
+    border-radius: .4em;
+    background: rgb(12, 114, 29);
+    color:white;
+}
+    .boton:hover {
+        color: #1883ba;
+        background-color: #ffffff;
+    }
+#cabeceraPagina {
+    font-family: 'Segoe UI', sans-serif, Arial;
+    background: white;
+    color: black;
+    height: 80px;
+    width: 100%;
+    left: 0;
+    top: 0;
+    position: fixed;
+}
+#cabecera {
+    background: white;
+}
+#divContenidoPagina {
+    margin-top: 127px;
+}
 #div-nombre-uv {
-    width: 80%;
+    width: 75%;
     float: right;
     background: -moz-linear-gradient(left, #fff 5%, #069 50%);
     background: -webkit-linear-gradient(left, #fff 5%,#069 50%);
@@ -15,62 +35,7 @@
     background: linear-gradient(to right, #fff 5%,#069 50%);
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=1,startColorstr='#FFFFFF', endColorstr='#006699');
 }
-
-#span-nombre-uv {
-    font-size: 2.20em;
-    float: right;
-    margin-top: 6px;
-    margin-right: 22px;
-    color: #fff;
-}
-
-#div2 > p {
-    position: relative;
-    left: +5%;
-    clear: both;
-    float: left;
-    color: rgb(28, 177, 28);
-    font-size: 140%;
-    font-weight: 600;
-    font-style: normal;
-}
-
-#div2 > ul {
-    clear: left;
-    float: left;
-    width: 100%;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-    #div2 > ul > li {
-        float: left;
-    }
-
-        #div2 > ul > li > a {
-            padding: .3em;
-            display: block;
-            text-decoration: none;
-            color: #333;
-            background: #F4F4F4;
-        }
-
-            #div2 > ul > li > a:hover {
-                color: rgb(28, 177, 28);
-            }
-
-            #div2 > ul > li > a:active {
-                background: rgb(173, 173, 180);
-                color: rgb(0, 0, 0);
-            }
-
-#combo {
-    clear: left;
-    float: left;
-}
-
-#divCanvas {
+#divCanvasGrafica {
     text-align: center;
     box-sizing: border-box;
     clear: left;
@@ -78,21 +43,117 @@
     width: 60%;
     padding: 10px;
 }
-
-.imagenesSeleccion > img {
-    -webkit-filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%);   
-    filter: grayscale(100%);
-    width: 40px;
-    height: 40px;
+#divTablaEstadistica {
+    margin-top: 7em;
+}
+.imagenesSeleccion {
+    clear: both;
 }
 
-    .imagenesSeleccion > img:hover {
-        filter: opacity(.5);
-        filter: blur(2px);
-        -webkit-filter: grayscale(0%);
-        -moz-filter: grayscale(0%);
-        -ms-filter: grayscale(0%);
-        filter: grayscale(0%);
+    .imagenesSeleccion > img {
+        -webkit-filter: grayscale(100%);
+        -moz-filter: grayscale(100%);
+        -ms-filter: grayscale(100%);
+        filter: grayscale(100%);
+        width: 25px;
+        height: 25px;
+        margin-right: 2em;
     }
+
+        .imagenesSeleccion > img:hover {
+            filter: opacity(.5);
+            filter: blur(2px);
+            -webkit-filter: grayscale(0%);
+            -moz-filter: grayscale(0%);
+            -ms-filter: grayscale(0%);
+            filter: grayscale(0%);
+        }
+#menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+    #menu > li a {
+        display: block;
+        color: rgb(0,0,0);
+        text-align: center;
+        padding: 0em 1.5em;
+        text-decoration: none;
+    }
+        #menu > li a:hover {
+            color: rgb(15,139,36);
+            border-bottom: 3px solid rgb(15,139,36);
+        }
+
+.posicionar {
+    clear: both;
+}
+
+#span-nombre-uv {
+    font-size: 2em;
+    float: right;
+    margin-top: 6px;
+    margin-right: 22px;
+    color: #fff;
+}
+
+.separar {
+    margin-bottom: .2em;
+    color: rgb(15,139,36);
+    font-weight: 400;
+    font-size: 1.8em;
+    font-style: normal;
+}
+
+#tabla {
+    border: 1px solid black;
+    text-align: center;
+    border-collapse: collapse;
+    border: red, 1px,solid;
+}
+
+tr:nth-child(odd) {
+        background-color: #f2f2f2;
+    }
+tr:nth-child(even) {
+        background-color: #fbfbfb;
+    }
+
+tr > th {
+        background: rgb(12, 114, 29);
+        color: white;
+    }
+
+@media (max-width: 1000px) {
+    body {
+        font-weight: bold;
+    }
+    #divCanvasGrafica {
+        text-align: center;
+        box-sizing: border-box;
+        clear: left;
+        float: left;
+        width: 100%;
+    }
+    #divCombos {
+        text-align: center;
+        font-size: x-large;
+    }
+        #divCombos > select {
+            font-size: x-large;
+        }
+    .imagenesSeleccion > img {
+        width: 3em;
+        height: 3em;
+        margin-right: 4em;
+    }
+    #tabla {
+        width: 100%;
+        font-size: x-large;
+    }
+}
